--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.7.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
@@ -20,11 +21,13 @@
     "flag-icons": "^7.2.3",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.454.0",
-    "next": "^14.2.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-select": "^5.8.3",
+    "react-slick": "^0.30.2",
     "sharp": "^0.33.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
